--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
   ],
   "require": {
     "underpin/logger-loader": "^1.0",
+    "underpin/option-loader": "^1.0",
     "underpin/underpin": "1.2.*"
   },
   "autoload": {
